Add navigation header and lesson video template
- Created a new navigation header template for lesson video pages, including responsive design, logo, and user authentication features.
- Implemented a lesson video page template that integrates the new navigation header, main content, and footer.
- Added dark mode functionality with theme switching options.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,5 +53,7 @@ spring.session.jdbc.table-name=SPRING_SESSION
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
+spring.devtools.restart.enabled=true
+
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
