--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.mvc.log-request-details=true
 
 # JDBC URL
 # Database connection
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Olearning;encrypt=false;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=OLearning_new;encrypt=false;
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
